--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
