--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
