--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
